--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,25 @@
   }
 }
 
+/* Webkit (Chrome, Safari) scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #080808;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #26DE29;
+  border-radius: 4px;
+}
+
+
 body {
+  @apply bg-black text-white;
+  scrollbar-width: thin;
+  scrollbar-color: #26DE29 #080808;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
